# app/OpenApi/Schemas/CartSchema.php
@@ -1,0 +1,32 @@
+<?php
+
+namespace App\OpenApi\Schemas;
+
+use GoldSpecDigital\ObjectOrientedOAS\Contracts\SchemaContract;
+use GoldSpecDigital\ObjectOrientedOAS\Objects\AllOf;
+use GoldSpecDigital\ObjectOrientedOAS\Objects\AnyOf;
+use GoldSpecDigital\ObjectOrientedOAS\Objects\Not;
+use GoldSpecDigital\ObjectOrientedOAS\Objects\OneOf;
+use GoldSpecDigital\ObjectOrientedOAS\Objects\Schema;
+use Vyuldashev\LaravelOpenApi\Contracts\Reusable;
+use Vyuldashev\LaravelOpenApi\Factories\SchemaFactory;
+
+class CartSchema extends SchemaFactory implements Reusable
+{
+    /**
+     * @return AllOf|OneOf|AnyOf|Not|Schema
+     */
+    public function build(): SchemaContract
+    {
+        return Schema::object('Cart')
+            ->properties(
+                Schema::array('items')->items(Schema::object()->properties(
+                    ProductListSchema::ref('product'),
+                    Schema::integer('quantity'),
+                    Schema::number('price_item')->format('double'),
+                    Schema::number('price_total')->format('double'),
+                )),
+                Schema::number('price_total')->format('double'),
+            );
+    }
+}
